project09/src/main/java/com/example/project09/error/exception/BusinessException.java
package com.example.project09.error.exception;

import com.example.project09.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        this.errorCode = errorCode;
    }

}
